✨feat: 实时CA监控功能 ✨feat: 查看删除CA帖子 ✨feat: CA热榜 ✨feat: CA统计数据面板 🎨ui: 重新设计仪表板，改进导航和布局 🎨ui: 增强侧边栏，支持折叠功能和更好的响应式设计 🎨ui: 改进卡片布局，提供更好的数据展示 🎨ui: 在整个应用中添加加载状态和错误处理 🐛fix: 修复头像加载问题，使用默认logo作为备用 🐛fix: 修复侧边栏尺寸和布局问题

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,6 +35,8 @@
     "custom": "Custom"
   },
   "userInfo": {
+    "account": "Account",
+    "details": "Details",
     "used": "Used",
     "twitterNotes": "Twitter Notes",
     "walletNotes": "Wallet Notes",
@@ -422,6 +424,9 @@
   "dashboard": {
     "title": "Tw3Track Dashboard",
     "subtitle": "X Web3 Trends",
+    "analytics": "Analytics",
+    "dataManagement": "Data Management",
+    "system": "System",
     "web3Trends": "X Web3 Hot Trends",
     "web3TrendsDesc": "Track and analyze X Web3 market trends",
     "twitterTrends": "X Trend Analysis",
